@@ -1,3 +1,10 @@
+TAG: vocload-6-0-8-6
+STAFF: sc
+CHANGES: TR12461
+1) emapload.sh - delete old fatal and warning reports before running
+       emapload.py, we don't want old ones hanging around
+2) emapload.py - bug reporting multiple emaps root terms, see script for details
+
 TAG: vocload-6-0-8-5
 TAG: vocload-6-0-8-4
 TAG: vocload-6-0-8-3
